Adjust participant2 for the new API